30 March code files checkout

--- a/conf/base.yaml
+++ b/conf/base.yaml
@@ -5,18 +5,18 @@ defaults:
   - optimizer: momentum
 
 num_rounds: 3
-num_clients: 16
+num_clients: 10
 lr_scheduling: False
 
-batch_size: 64
-
+batch_size: 32
+val_ratio: 0.3
 partitioning: 'iid'
 alpha: 0.5
 balance: True
-num_classes: 4
+num_classes: 10
 subset: True 
 # datapath: './data'
-datapath: 'D:/DesktopC/Datasets/data/'
+datapath: 'D:/Datasets/data/'
 num_workers: 1
 
 C_fraction: 0.5
@@ -25,7 +25,7 @@ num_clients_per_round_eval: ${num_clients_per_round_fit}
 seed: 2024
 client_resources:
   num_cpus: 4
-  num_gpus: 0.0
+  num_gpus: 1
 var_local_epochs: False
 var_min_epochs: 1 
 var_max_epochs: 4
