--- a/conf/optimizer/simsiam.yaml
+++ b/conf/optimizer/simsiam.yaml
@@ -4,7 +4,7 @@ exp_name: simsiam
 
 optimizer:
   _target_: models.train
-  lr: 0.032
+  lr: 0.032 # base_lr
   momentum: 0.9
   weight_decay: 1e-4
   gmf: 0
