--- a/conf/optimizer/simsiam.yaml
+++ b/conf/optimizer/simsiam.yaml
@@ -6,6 +6,9 @@ optimizer:
   _target_: models.train
   lr: 0.032 # base_lr
   momentum: 0.9
-  weight_decay: 1e-4 # 0.0005
+  weight_decay: 5e-4 #1 h 5 gia 0.0001 h 0.0005 
   gmf: 0
   mu: 0
+  warmup_epochs: 10
+  warmup_lr: 0
+  final_lr: 0
