--- a/conf/optimizer/fedsimsiam.yaml
+++ b/conf/optimizer/fedsimsiam.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 
-exp_name: heterossfl
+exp_name: fedsimsiam
 
 optimizer:
   _target_: models.ScaffoldOptimizer
@@ -9,6 +9,6 @@ optimizer:
   weight_decay: 1e-4 # 0.0005
   gmf: 0
   mu: 0
-  mu_coeff: 0.3 # loss coefficient weight term for linear CKA, Authors: 0.5 CIFAR-10,  1 on tiny-imgnet(200 Classes) ~ Food 101 classes
+  mu_coeff: 0.0 # loss coefficient weight term for linear CKA, Authors: 0.5 CIFAR-10,  1 on tiny-imgnet(200 Classes) ~ Food 101 classes
   #For alignment and convergence
   # TBD
