--- a/conf/base.yaml
+++ b/conf/base.yaml
@@ -39,7 +39,10 @@ warm_up_rounds: 2
 
 model:
   #Linear evaluation
-  checkpoint: 'models/centr_pretrained_0.012_simsiam_resnet18_classes10_E200.pth'
+  checkpoint: 'models/centr_pretrained_0.015_simsiam_resnet18_Jit0.3_min_scale0.4_classes10_E2.pth'
+  #'models/best_model_eval_fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction0.2_B=128_E=1_R=3.npz'
+  #'centr_pretrained_0.015_simsiam_resnet18_Jit0.3_min_scale0.4_classes10_E200.pth'
+  # 'models/centr_pretrained_0.012_simsiam_resnet18_classes10_E200.pth'
   # 'models/centr_pretrainedV2_simsiam_resnet18_classes10_E200.pth'
   # 'C:\Users\smpoulio_local\Desktop\PythonProjects\FlowerYtTut\models\centr_pretrained_simsiam_resnet18_classes10_E200.pth'
   #C:\Users\smpoulio_local\Desktop\PythonProjects\FlowerYtTut\models\centr_pretrained_simsiam_resnet18_classes10_E200.pth   <-Gia simsiam xwris self.backbone
