--- a/conf/base.yaml
+++ b/conf/base.yaml
@@ -21,7 +21,7 @@ subset: True
 load: False
 cleaner: True
 checkpoint_path: models/
-datapath: 'D:/Datasets/data/'
+datapath: '/home/stavrosmpoul/codebaseMarch/data'
 num_workers: 0
 
 C_fraction: 0.5
@@ -35,7 +35,9 @@ var_local_epochs: False
 var_min_epochs: 1 
 var_max_epochs: 4
 local_epochs: 1
-warm_up_rounds: 2
+warm_up_rounds: 8
+pretrained: False
+warm_start: False
 
 model:
   #Linear evaluation
